# Text-Markov-Chain

./: README.md  markov_chain.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  pytest.yml
samples/: wyvern_copypasta.txt
src/: models.py
src/tests/: test.py  test_file.txt
tests/: test.py  test_src.py
