[project]
name = "text-markov-chain"
version = "0.1.0"
description = "A mini project that runs a text through a Makrov chain and outputs intresting numbers"
authors = [
    {name = "Gwion Hughes",email = "gwioninglasses@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pylint (>=3.3.8,<4.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
